--- a/app/src/main/res/layout/view_nashabutton.xml
+++ b/app/src/main/res/layout/view_nashabutton.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:cardBackgroundColor="@android:color/transparent"
-        app:cardCornerRadius="14dp"
+        app:cardCornerRadius="8dp"
         app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
