--- a/app/src/main/res/layout/card_add.xml
+++ b/app/src/main/res/layout/card_add.xml
@@ -164,6 +164,7 @@
     </androidx.cardview.widget.CardView>
 
     <ru.acted.nashbonus.views.NashaButtonView
+        android:id="@+id/readyButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
