--- a/app/src/main/res/layout/screen_welcome.xml
+++ b/app/src/main/res/layout/screen_welcome.xml
@@ -20,8 +20,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="409dp"
         android:layout_height="193dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        tools:layout_editor_absoluteX="1dp"
         tools:visibility="gone">
 
         <TextView
@@ -49,6 +50,7 @@
             android:background="@drawable/card"
             android:ems="10"
             android:fontFamily="@font/zen_regular"
+            android:hyphenationFrequency="normal"
             android:inputType="phone"
             android:padding="11dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -132,6 +134,7 @@
                 android:background="@drawable/card"
                 android:ems="10"
                 android:fontFamily="@font/zen_regular"
+                android:hyphenationFrequency="normal"
                 android:inputType="phone"
                 android:padding="8dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -152,6 +155,7 @@
                 android:background="@drawable/card"
                 android:ems="10"
                 android:fontFamily="@font/zen_regular"
+                android:hyphenationFrequency="normal"
                 android:inputType="phone"
                 android:padding="8dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -172,6 +176,7 @@
                 android:background="@drawable/card"
                 android:ems="10"
                 android:fontFamily="@font/zen_regular"
+                android:hyphenationFrequency="normal"
                 android:inputType="phone"
                 android:padding="8dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -193,6 +198,7 @@
                 android:background="@drawable/card"
                 android:ems="10"
                 android:fontFamily="@font/zen_regular"
+                android:hyphenationFrequency="normal"
                 android:inputType="phone"
                 android:padding="8dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -213,6 +219,7 @@
                 android:background="@drawable/card"
                 android:ems="10"
                 android:fontFamily="@font/zen_regular"
+                android:hyphenationFrequency="normal"
                 android:inputType="phone"
                 android:padding="8dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -233,6 +240,7 @@
                 android:background="@drawable/card"
                 android:ems="10"
                 android:fontFamily="@font/zen_regular"
+                android:hyphenationFrequency="normal"
                 android:inputType="phone"
                 android:padding="8dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
