--- a/app/src/main/res/layout/subscription_is_active.xml
+++ b/app/src/main/res/layout/subscription_is_active.xml
@@ -84,7 +84,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
-        app:cardBackgroundColor="@color/accent"
+        app:cardBackgroundColor="#FFDC00"
         app:cardCornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,28 +95,19 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="90dp"
-                android:layout_height="39dp"
-
+                android:id="@+id/lava"
+                android:layout_width="250dp"
+                android:layout_height="100dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_lava" />
 
-            <TextView
-                android:id="@+id/lavaWalletNumber"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:alpha="0.8"
-                android:fontFamily="@font/zen_regular"
-                android:text="148801092001"
-                android:textColor="@color/foreground"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView7"
-                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
