--- a/app/src/main/res/layout/screen_guide.xml
+++ b/app/src/main/res/layout/screen_guide.xml
@@ -29,20 +29,58 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.65">
+
+        <TextView
+            android:id="@+id/titleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:fontFamily="@font/zen_medium"
+            android:text="Что это такое"
+            android:textColor="@color/foreground"
+            android:textSize="23sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/headerText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="20dp"
+            android:alpha="0.5"
+            android:fontFamily="@font/zen_medium"
+            android:text="Информация 1/3"
+            android:textColor="@color/foreground"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/titleText"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <ru.acted.nashbonus.views.NashaButtonView
+        android:id="@+id/proceedNextButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         app:button_is_bold="true"
-        app:button_text="Далее"
+        app:button_text="Что ещё?"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/image"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
@@ -55,47 +93,21 @@
         app:srcCompat="@drawable/pic_card_hint" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/descriptionText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:alpha="0.8"
         android:fontFamily="@font/zen_regular"
         android:text="Все дисконтные карты ваших любимых магазинов в одном приложении!"
         android:textColor="@color/foreground"
         android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/proceedNextButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/view"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="20dp"
-        android:fontFamily="@font/zen_medium"
-        android:text="Что это такое"
-        android:textColor="@color/foreground"
-        android:textSize="23sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="5dp"
-        android:alpha="0.5"
-        android:fontFamily="@font/zen_medium"
-        android:text="Информация 1/3"
-        android:textColor="@color/foreground"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintStart_toStartOf="@+id/view" />
+        app:layout_constraintTop_toBottomOf="@+id/image"
+        app:layout_constraintVertical_bias="0.35000002" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
