--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="foreground">#FFFFFFFF</color>
     <color name="background">#1B1B1B</color>
     <color name="accent">#3D3D3D</color>
+    <color name="addtitional">#DAA0FF</color>
 </resources>
