--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,8 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.NashBonus" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
+        <item name="android:statusBarColor">@color/background</item>
+        <item name="android:windowLightStatusBar">false</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
